--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
@@ -1,11 +1,12 @@
-@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
+@import play.api.Configuration
+@(pageTitle: String, heading: String, message: String)(implicit messages: Messages, configuration: Configuration)
 
 @contentHeader = {
-  <h1>@heading</h1>
+    <h1>@heading</h1>
 }
 
 @mainContent = {
-  <p>@message</p>
+    <p>@message</p>
 }
 
-@govuk_wrapper(appConfig = uk.gov.hmrc.agentepayeregistrationfrontend.FrontendAppConfig, title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
+@govuk_wrapper(title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
