[APB-934][JR,RV] Some vaildation tweaks. Added various messages. Created registration confirmation page.

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -23,7 +23,7 @@
 
 @insideHeader = {
 @uiLayouts.header_nav(
-    navTitle = configuration.getString("appName"),
+    navTitle = None,
     navTitleLink = None,
     showBetaLink = false,
     navLinks = Some(headerNavLinks))
