[APB-934][JR,RV] Integration tests

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration.scala.html
@@ -65,7 +65,7 @@ action = AgentEpayeRegistrationController.register,
 
     <div class="form-field">
         @input(
-        detailsForm("addressLine1"),
+        detailsForm("address.addressLine1"),
         '_label -> Messages("registration.addressline1.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
@@ -74,7 +74,7 @@ action = AgentEpayeRegistrationController.register,
 
     <div class="form-field">
         @input(
-        detailsForm("addressLine2"),
+        detailsForm("address.addressLine2"),
         '_label -> Messages("registration.addressline2.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
@@ -83,7 +83,7 @@ action = AgentEpayeRegistrationController.register,
 
     <div class="form-field">
         @input(
-        detailsForm("addressLine3"),
+        detailsForm("address.addressLine3"),
         '_label -> Messages("registration.addressline3.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
@@ -92,7 +92,7 @@ action = AgentEpayeRegistrationController.register,
 
     <div class="form-field">
         @input(
-        detailsForm("addressLine4"),
+        detailsForm("address.addressLine4"),
         '_label -> Messages("registration.addressline4.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
@@ -100,7 +100,7 @@ action = AgentEpayeRegistrationController.register,
     </div>
     <div class="form-field">
         @input(
-        detailsForm("postcode"),
+        detailsForm("address.postcode"),
         '_label -> Messages("registration.postcode.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
