--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
@@ -13,6 +13,6 @@
     </p1>
 
     <p>
-        <a class="button button-start button--get-started" name="start" id="start now" href="@AgentEpayeRegistrationController.details" role="button">Start now</a>
+        <a class="button button-start button--get-started" name="start" id="start now" href="@AgentEpayeRegistrationController.showAgentDetailsForm" role="button">Start now</a>
     </p>
 }
