--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
@@ -6,127 +6,77 @@
 
 @(detailsForm : Form[RegistrationRequest])(implicit request: Request[_], messages: Messages, config: Configuration)
 
-@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("details.title"), bodyClasses = None) {
+@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("details.contact.title"), bodyClasses = None) {
 
-  <h1> @Messages("details.label")</h1>
-  <p> @Messages("details.p1")</p>
+  <header class="page-header">
+    <h1> @Messages("details.agent.label")</h1>
+  </header>
+
+  <p> @Messages("details.agent.description")</p>
 
   @form(
     action = AgentEpayeRegistrationController.agentDetails,
     'class -> "form js-form") {
 
+
     <fieldset class="form-field-group">
       <div class="form-field">
       @input(
         detailsForm("agentName"),
-        '_label -> Messages("details.formTitle"),
+        '_label -> Messages("details.agent.agentName.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
       )
       </div>
     </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("contactName"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("telephoneNumber"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("faxNumber"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("emailAddress"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("address.addressLine1"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("address.addressLine2"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("address.addressLine3"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("address.addressLine4"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
       @input(
         detailsForm("address.postcode"),
-        '_label -> Messages("details.formTitle"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_type -> "hidden"
       )
-      </div>
-    </fieldset>
 
     <div class="form-field">
-      <button class="button" type="submit" id="subscribe">@Messages("button.continue")</button>
+      <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
     </div>
   }
 
