--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
@@ -5,14 +5,17 @@
 
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("start.title"), bodyClasses = None) {
 
-    <h1> @Messages("start.label")</h1>
+    <header class="page-header">
+        <h1> @Messages("start.label")</h1>
+    </header>
+
     <p> @Messages("start.intro")</p>
 
     <p1>
-    <a href="@Messages("start.helpdesk")"> Contact the online services helpdesk if you need help.</a>
+    <a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/online-services-helpdesk">@Messages("start.helpdesklink.text1")</a> @Messages("start.helpdesklink.text2")
     </p1>
 
     <p>
-        <a class="button button-start button--get-started" name="start" id="start now" href="@AgentEpayeRegistrationController.showAgentDetailsForm" role="button">Start now</a>
+        <a class="button button-start button--get-started" name="start" href="@AgentEpayeRegistrationController.showAgentDetailsForm" role="button">Start now</a>
     </p>
 }
