[APB-1021][JR] Updated validation. Removed faxNumber. Removed vestigial /register endpoint. Added some further unit tests. Corrected a couple of bugs.

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
@@ -20,12 +20,12 @@ action = AgentEpayeRegistrationController.addressDetails,
 
 
     <div class="form-field">
-        @input(
+    @input(
         detailsForm("address.addressLine1"),
         '_label -> Messages("details.address.addressline1.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
-        )
+    )
     </div>
 
     <div class="form-field">
@@ -38,58 +38,36 @@ action = AgentEpayeRegistrationController.addressDetails,
     </div>
 
     <div class="form-field">
-        @input(
-                    detailsForm("address.addressLine3"),
-    '_label -> Messages("details.address.addressline3.label"),
-    '_inputClass -> "input--medium input--cleared",
-    '_labelClass -> "bold"
+    @input(
+        detailsForm("address.addressLine3"),
+        '_label -> Messages("details.address.addressline3.label"),
+        '_inputClass -> "input--medium input--cleared",
+        '_labelClass -> "bold"
     )
     </div>
 
     <div class="form-field">
-        @input(
+    @input(
         detailsForm("address.addressLine4"),
         '_label -> Messages("details.address.addressline4.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
-        )
+    )
     </div>
 
     <div class="form-field">
-        @input(
+    @input(
         detailsForm("address.postcode"),
         '_label -> Messages("details.address.postcode.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
-        )
+    )
     </div>
 
-    @input(
-    detailsForm("agentName"),
-    '_type -> "hidden"
-    )
-
-    @input(
-    detailsForm("contactName"),
-    '_type -> "hidden"
-    )
-
-    @input(
-    detailsForm("telephoneNumber"),
-    '_type -> "hidden"
-    )
-
-    @input(
-    detailsForm("emailAddress"),
-    '_type -> "hidden"
-    )
-
-    @input(
-    detailsForm("faxNumber"),
-    '_type -> "hidden"
-    )
-
-
+    @input(detailsForm("agentName"), '_type -> "hidden")
+    @input(detailsForm("contactName"), '_type -> "hidden")
+    @input(detailsForm("telephoneNumber"), '_type -> "hidden")
+    @input(detailsForm("emailAddress"), '_type -> "hidden")
 </fieldset>
 
 <div class="form-field">
