--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
@@ -8,16 +8,13 @@
 
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("details.address.title"), bodyClasses = None) {
 
-<header class="page-header">
-    <h1>@Messages("details.address.label")</h1>
-</header>
-
 @form(
 action = AgentEpayeRegistrationController.addressDetails,
 'class -> "form js-form") {
 
-<fieldset class="form-field-group">
+<h1 class="form-title heading-large">@Messages("details.address.label")</h1>
 
+<fieldset class="form-field-group">
 
     <div class="form-field">
     @input(
