--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/main_template.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/main_template.scala.html
@@ -15,11 +15,12 @@
     }
 }
 
-@govuk_wrapper(title,
+@govuk_wrapper(
+               title,
                mainClass,
                bodyClasses = bodyClasses,
                sidebar = sidebar,
                contentHeader = contentHeader,
-               mainContent = mainContent,
+               mainContent = layouts.article(mainContent),
                serviceInfoContent = serviceInfoContent,
                scriptElem = scriptElem)
