--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
@@ -11,30 +11,29 @@
   @form(
     action = AgentEpayeRegistrationController.agentDetails,
     'class -> "form js-form") {
-
-    <h1 class="form-title heading-large">@Messages("details.agent.label")</h1>
+    <header class="page-header">
+        <h1>@Messages("details.agent.label")</h1>
+    </header>
 
     <p>@Messages("details.agent.description")</p>
 
-    <fieldset class="form-field-group">
-      <div class="form-field">
+    <div class="form-field">
       @input(
         detailsForm("agentName"),
         '_label -> Messages("details.agent.agentName.label"),
         '_inputClass -> "input--medium input--cleared",
         '_labelClass -> "bold"
       )
-      </div>
-    </fieldset>
+    </div>
 
-      @input(detailsForm("contactName"), '_type -> "hidden")
-      @input(detailsForm("telephoneNumber"), '_type -> "hidden")
-      @input(detailsForm("emailAddress"), '_type -> "hidden")
-      @input(detailsForm("address.addressLine1"), '_type -> "hidden")
-      @input(detailsForm("address.addressLine2"), '_type -> "hidden")
-      @input(detailsForm("address.addressLine3"), '_type -> "hidden")
-      @input(detailsForm("address.addressLine4"), '_type -> "hidden")
-      @input(detailsForm("address.postcode"), '_type -> "hidden")
+    <input type="hidden" name="contactName" id="contactName" value="@detailsForm("contactName").value">
+    <input type="hidden" name="telephoneNumber" id="telephoneNumber" value="@detailsForm("telephoneNumber").value">
+    <input type="hidden" name="emailAddress" id="emailAddress" value="@detailsForm("emailAddress").value">
+    <input type="hidden" name="address.addressLine1" id="address.addressLine1" value="@detailsForm("address.addressLine1").value">
+    <input type="hidden" name="address.addressLine2" id="address.addressLine2" value="@detailsForm("address.addressLine2").value">
+    <input type="hidden" name="address.addressLine3" id="address.addressLine3" value="@detailsForm("address.addressLine3").value">
+    <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
+    <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
 
     <div class="form-field">
       <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
