--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/contactDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/contactDetails.scala.html
@@ -4,6 +4,7 @@
 @import uk.gov.hmrc.agentepayeregistrationfrontend.models.RegistrationRequest
 @import play.api.Configuration
 
+
 @(detailsForm: Form[RegistrationRequest])(implicit request: Request[_], messages: Messages, config: Configuration)
 
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("details.contact.title"), bodyClasses = None) {
@@ -12,49 +13,49 @@
 action = AgentEpayeRegistrationController.contactDetails,
 'class -> "form js-form") {
 
-<h1 class="form-title heading-large">@Messages("details.contact.label")</h1>
-<p>@Messages("details.contact.description")</p>
+    <header class="page-header">
+        <h1>@Messages("details.contact.label")</h1>
+    </header>
 
-<fieldset class="form-field-group">
+    <p>@Messages("details.contact.description")</p>
 
     <div class="form-field">
-    @input(
-        detailsForm("contactName"),
-        '_label -> Messages("details.contact.contactName.label"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
-    )
+        @input(
+            detailsForm("contactName"),
+            '_label -> Messages("details.contact.contactName.label"),
+            '_inputClass -> "input--medium input--cleared",
+            '_labelClass -> "bold"
+        )
     </div>
 
     <div class="form-field">
-    @input(
-        detailsForm("emailAddress"),
-        '_label -> Messages("details.contact.emailAddress.label"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
-    )
+        @input(
+            detailsForm("emailAddress"),
+            '_label -> Messages("details.contact.emailAddress.label"),
+            '_inputClass -> "input--medium input--cleared",
+            '_labelClass -> "bold"
+        )
     </div>
 
     <div class="form-field">
-    @input(
-        detailsForm("telephoneNumber"),
-        '_label -> Messages("details.contact.telephoneNumber.label"),
-        '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
-    )
+        @input(
+            detailsForm("telephoneNumber"),
+            '_label -> Messages("details.contact.telephoneNumber.label"),
+            '_inputClass -> "input--medium input--cleared",
+            '_labelClass -> "bold"
+        )
     </div>
 
-    @input(detailsForm("agentName"), '_type -> "hidden")
-    @input(detailsForm("address.addressLine1"), '_type -> "hidden")
-    @input(detailsForm("address.addressLine2"), '_type -> "hidden")
-    @input(detailsForm("address.addressLine3"), '_type -> "hidden")
-    @input(detailsForm("address.addressLine4"), '_type -> "hidden")
-    @input(detailsForm("address.postcode"), '_type -> "hidden")
+    <input type="hidden" name="agentName" id="agentName" value="@detailsForm("agentName").value">
+    <input type="hidden" name="address.addressLine1" id="address.addressLine1" value="@detailsForm("address.addressLine1").value">
+    <input type="hidden" name="address.addressLine2" id="address.addressLine2" value="@detailsForm("address.addressLine2").value">
+    <input type="hidden" name="address.addressLine3" id="address.addressLine3" value="@detailsForm("address.addressLine3").value">
+    <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
+    <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
 
-</fieldset>
 
-<div class="form-field">
-    <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
-</div>
-}
+    <div class="form-field">
+        <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
+    </div>
+    }
 }
