[SS][APB-1021] revert back to 3/4 column

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
@@ -6,7 +6,7 @@
 
 @(detailsForm : Form[RegistrationRequest])(implicit request: Request[_], messages: Messages, config: Configuration)
 
-@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("summary.title"), bodyClasses = Some("full-width")) {
+@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("summary.title"), bodyClasses = None) {
 
   @form(action = AgentEpayeRegistrationController.summary, 'class -> "form js-form") {
 
